load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/gebn/bmc/cmd/chassis-control",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//pkg/ipmi:go_default_library",
        "@com_github_alecthomas_kingpin//:go_default_library",
    ],
)

go_binary(
    name = "chassis-control",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
