load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/gebn/bmc/cmd/describe",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//internal/pkg/transport:go_default_library",
        "//pkg/dcmi:go_default_library",
        "//pkg/ipmi:go_default_library",
        "@com_github_alecthomas_kingpin//:go_default_library",
        "@com_github_google_gopacket//:go_default_library",
        "@com_github_google_gopacket//layers:go_default_library",
    ],
)

go_binary(
    name = "describe",
    embed = [":go_default_library"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)
