load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "get_dcmi_capabilities_info.go",
        "layer_types.go",
        "operations.go",
        "rolling_average.go",
        "session_commander.go",
        "session_commands.go",
        "sessionless_commander.go",
        "sessionless_commands.go",
    ],
    importpath = "github.com/gebn/bmc/pkg/dcmi",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//pkg/ipmi:go_default_library",
        "//pkg/layerexts:go_default_library",
        "@com_github_google_gopacket//:go_default_library",
        "@com_github_google_gopacket//layers:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "get_dcmi_capabilities_info_test.go",
        "rolling_average_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/ipmi:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_gopacket//:go_default_library",
        "@com_github_google_gopacket//layers:go_default_library",
    ],
)
