load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "address.go",
        "aes_128_cbc.go",
        "authentication_algorithm.go",
        "authentication_payload.go",
        "authentication_type.go",
        "body_code.go",
        "channel.go",
        "chassis_control.go",
        "close_session.go",
        "command.go",
        "command_number.go",
        "completion_code.go",
        "confidentiality_algorithm.go",
        "confidentiality_payload.go",
        "doc.go",
        "get_channel_authentication_capabilities.go",
        "get_chassis_status.go",
        "get_device_id.go",
        "get_system_guid.go",
        "integrity_algorithm.go",
        "integrity_payload.go",
        "layer_types.go",
        "lun.go",
        "message.go",
        "network_function.go",
        "open_session.go",
        "operation.go",
        "payload.go",
        "payload_type.go",
        "privilege_level.go",
        "rakp_message_1.go",
        "rakp_message_2.go",
        "rakp_message_3.go",
        "rakp_message_4.go",
        "session_selector.go",
        "slave_address.go",
        "software_id.go",
        "status_code.go",
        "v1session.go",
        "v2session.go",
    ],
    importpath = "github.com/gebn/bmc/pkg/ipmi",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/pkg/bcd:go_default_library",
        "//pkg/iana:go_default_library",
        "//pkg/layerexts:go_default_library",
        "@com_github_google_gopacket//:go_default_library",
        "@com_github_google_gopacket//layers:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "aes_128_cbc_test.go",
        "authentication_payload_test.go",
        "confidentiality_payload_test.go",
        "get_channel_authentication_capabilities_test.go",
        "get_chassis_status_test.go",
        "get_device_id_test.go",
        "integrity_payload_test.go",
        "message_test.go",
        "open_session_test.go",
        "rakp_message_1_test.go",
        "rakp_message_2_test.go",
        "rakp_message_3_test.go",
        "rakp_message_4_test.go",
        "v1session_test.go",
        "v2session_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_gopacket//:go_default_library",
        "@com_github_google_gopacket//layers:go_default_library",
    ],
)
