load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "decoded_types.go",
        "decoder.go",
        "doc.go",
        "serializable_decoding.go",
    ],
    importpath = "github.com/gebn/bmc/pkg/layerexts",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_google_gopacket//:go_default_library"],
)
