load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["bcd.go"],
    importpath = "github.com/gebn/bmc/internal/pkg/bcd",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "go_default_test",
    srcs = ["bcd_test.go"],
    embed = [":go_default_library"],
)
