load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "ones.go",
        "twos.go",
    ],
    importpath = "github.com/gebn/bmc/internal/pkg/complement",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "ones_test.go",
        "twos_test.go",
    ],
    embed = [":go_default_library"],
)
